--- a/src/components/ui/text/description/description-about/DescriptionAbout.module.scss
+++ b/src/components/ui/text/description/description-about/DescriptionAbout.module.scss
@@ -41,5 +41,8 @@
 }
 
 @media only screen and (px-to-rem(480) > width) {
-	;
+	.description {
+		margin-bottom: rubber-size(480, 20, 320, 15);
+		font-size: rubber-size(480, 12, 320, 11);
+	}
 }
