The 'Skills' components adapted from >1600px to 1366px

--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -1,7 +1,7 @@
 @use '@sass/main' as *;
 
 .skills {
-	padding-top: 75px;
+	padding-top: px-to-rem(75);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
