--- a/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
@@ -7,17 +7,12 @@
 	gap: px-to-rem(65) px-to-rem(120);
 }
 
-@media only screen and (px-to-rem(1920) > width) {
+@media only screen and (px-to-rem(1600) > width) {
 	.skills {
-		$edge: rubber-size(1600, 100, 1366, 95);
-		$center: rubber-size(1600, 150, 1366, 140);
-		$row: rubber-size(1600, 65, 1366, 50);
-		$column: rubber-size(1600, 120, 1366, 100);
-		
-		--edge: #{$edge};
-		--center: #{$center};
-		--row: #{$row};
-		--column: #{$column};
+		--edge: #{rubber-size(1600, 100, 1366, 95)};
+		--center: #{rubber-size(1600, 150, 1366, 140)};
+		--row: #{rubber-size(1600, 65, 1366, 50)};
+		--column: #{rubber-size(1600, 120, 1366, 100)};
 
 		margin-top: rubber-size(1600, 95, 1366, 80);
 		grid-template-columns: var(--edge) var(--center) var(--center) var(--edge);
@@ -25,21 +20,14 @@
 	}
 }
 
-@media only screen and (px-to-rem(1600) > width) {
-	.skills {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1366) > width) {
-	.skills {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.skills {
-		;
+		--edge: #{rubber-size(1280, 95, 1080, 85)};
+		--center: #{rubber-size(1280, 140, 1080, 125)};
+		--row: #{rubber-size(1280, 50, 1080, 45)};
+		--column: #{rubber-size(1280, 100, 1080, 90)};
+
+		margin-top: rubber-size(1280, 80, 1080, 70);
 	}
 }
 
