--- a/src/components/ui/text/heading/heading-skills/HeadingSkills.module.scss
+++ b/src/components/ui/text/heading/heading-skills/HeadingSkills.module.scss
@@ -15,15 +15,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.heading {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.heading {
-		;
+		font-size: rubber-size(1280, 27, 1080, 25);
 	}
 }
 
