--- a/src/components/skills/Skills.module.scss
+++ b/src/components/skills/Skills.module.scss
@@ -7,3 +7,33 @@
 	align-items: center;
 	justify-content: flex-start;
 }
+
+@media only screen and (px-to-rem(1080) > width) {
+	.skills {
+		padding-top: rubber-size(1080, 75, 900, 60);
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.skills {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.skills {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.skills {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.skills {
+		;
+	}
+}
