The 'Skills' component adapted from 576px to 480px

--- a/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.scss
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.scss
@@ -26,13 +26,13 @@
 
 @media only screen and (px-to-rem(768) > width) {
 	.image {
-		height: px-to-rem(65);
+		height: rubber-size(768, 90, 576, 65);
 	}
 }
 
 @media only screen and (px-to-rem(576) > width) {
 	.image {
-		;
+		height: px-to-rem(80);
 	}
 }
 
