--- a/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
@@ -66,7 +66,12 @@
 
 @media only screen and (px-to-rem(576) > width) {
 	.skills {
-		;
+		--edge: #{px-to-rem(80)};
+		--row: #{px-to-rem(30)};
+		--column: #{px-to-rem(100)};
+
+		margin-top: px-to-rem(30);
+		grid-template-columns: var(--edge) var(--edge);
 	}
 }
 
