--- a/src/components/ui/text/heading/heading-skills/HeadingSkills.module.scss
+++ b/src/components/ui/text/heading/heading-skills/HeadingSkills.module.scss
@@ -27,15 +27,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(768) > width) {
-	.heading {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(576) > width) {
 	.heading {
-		;
+		font-size: px-to-rem(17);
 	}
 }
 
