--- a/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/SkillsList.module.scss
@@ -77,6 +77,10 @@
 
 @media only screen and (px-to-rem(480) > width) {
 	.skills {
-		;
+		--edge: #{rubber-size(480, 80, 320, 65)};
+		--row: #{rubber-size(480, 30, 320, 20)};
+		--column: #{rubber-size(480, 100, 320, 60)};
+
+		margin-top: rubber-size(480, 30, 320, 25);
 	}
 }
