The 'Portfolio' component adapted 1920px and greater

--- a/src/components/portfolio/projects/Projects.module.scss
+++ b/src/components/portfolio/projects/Projects.module.scss
@@ -5,3 +5,21 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 }
+
+@media only screen and (width >= px-to-rem(2300)) {
+	.projects {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+}
+
+@media only screen and (width >= px-to-rem(3000)) {
+	.projects {
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	}
+}
+
+@media only screen and (width >= px-to-rem(3500)) {
+	.projects {
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+	}
+}
