The 'Portfolio' component adapted from 1920px to 1600px

--- a/src/components/portfolio/projects/Projects.module.scss
+++ b/src/components/portfolio/projects/Projects.module.scss
@@ -23,3 +23,9 @@
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	}
 }
+
+@media only screen and (width >= px-to-rem(3840)) {
+	.projects {
+		max-width: px-to-rem(3840);
+	}
+}
