--- a/src/assets/sass/_classes.scss
+++ b/src/assets/sass/_classes.scss
@@ -23,9 +23,8 @@
 %btn-small {
 	@extend %button;
 
-	width: 115px;
-	height: 25px;
 	border-inline: 2px solid $color-full-white;
+	padding: 0.5em 1.5em;
 	font-weight: 600;
 	font-size: 12px;
 	letter-spacing: 0.1em;
@@ -47,4 +46,94 @@
 	font-family: $font-raleway;
 	font-weight: 700;
 	color: $color-full-black;
+}
+
+@media only screen and (px-to-rem(1920) > width) {
+	%btn-small {
+		font-size: rubber-size(1920, 12, 1600, 11);
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	%btn-small {
+		;
+	}
+
+	%btn-big {
+		;
+	}
 }
