--- a/src/components/portfolio/Portfolio.module.scss
+++ b/src/components/portfolio/Portfolio.module.scss
@@ -3,21 +3,7 @@
 .portfolio {
 	width: 100%;
 	background-color: $color-light-black;
-}
-
-.more {
-	width: 100%;
-	height: 70px;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 	align-items: center;
-}
-
-.link {
-	font-weight: 600 !important;
-	font-size: 20px !important;
-
-	&:hover {
-		text-decoration: underline;
-	}
 }
