--- a/src/components/portfolio/background/Background.module.scss
+++ b/src/components/portfolio/background/Background.module.scss
@@ -3,7 +3,7 @@
 .background {
 	position: relative;
 	width: 100%;
-	height: 320px;
+	padding-block: px-to-rem(100);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -17,14 +17,68 @@
 	&-wrap {
 		position: absolute;
 		width: 100%;
-		height: 320px;
+		height: 100%;
 		background-color: $color-full-black;
 		z-index: 1;
 	}
 }
 
 .heading {
-	border: 8px solid $color-full-white !important;
+	border-color: $color-full-white;
 	color: $color-full-white !important;
 	z-index: 2;
+}
+
+@media only screen and (px-to-rem(1920) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.background {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.background {
+		;
+	}
 }
