--- a/src/components/portfolio/projects/project/information/Information.module.scss
+++ b/src/components/portfolio/projects/project/information/Information.module.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	padding-inline: 80px;
+	padding-inline: px-to-rem(80);
 	opacity: 0;
 	display: flex;
 	flex-direction: column;
@@ -12,4 +12,58 @@
 	justify-content: center;
 	transition: opacity $transition-animation;
 	z-index: 2;
+}
+
+@media only screen and (px-to-rem(1920) > width) {
+	.information {
+		padding-inline: rubber-size(1920, 80, 1600, 60);
+	}
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.information {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.information {
+		;
+	}
 }
