--- a/src/components/portfolio/projects/project/information/buttons/Buttons.module.scss
+++ b/src/components/portfolio/projects/project/information/buttons/Buttons.module.scss
@@ -1,6 +1,60 @@
 @use '@sass/main' as *;
 
 .buttons {
-	margin-top: 25px;
+	margin-top: px-to-rem(25);
 	display: flex;
+}
+
+@media only screen and (px-to-rem(1920) > width) {
+	.buttons {
+		margin-top: rubber-size(1920, 25, 160, 20);
+	}
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.buttons {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.buttons {
+		;
+	}
 }
