--- a/src/components/ui/text/heading/heading-project/HeadingProject.module.scss
+++ b/src/components/ui/text/heading/heading-project/HeadingProject.module.scss
@@ -3,10 +3,64 @@
 .heading {
 	font-family: $font-montserrat;
 	font-weight: 700;
-	font-size: 25px;
+	font-size: px-to-rem(25);
 	line-height: 128%;
 	letter-spacing: 0.21em;
 	text-transform: uppercase;
 	text-align: center;
 	color: $color-full-white !important;
+}
+
+@media only screen and (px-to-rem(1920) > width) {
+	.heading {
+		font-size: rubber-size(1920, 25, 1600, 22);
+	}
+}
+
+@media only screen and (px-to-rem(1600) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.heading {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.heading {
+		;
+	}
 }
