--- a/src/assets/sass/_classes.scss
+++ b/src/assets/sass/_classes.scss
@@ -1,4 +1,5 @@
 @use '@sass/vars' as *;
+@use '@sass/functions' as *;
 
 %title-level-two {
 	width: unset;
@@ -23,10 +24,10 @@
 %btn-small {
 	@extend %button;
 
-	border-inline: 2px solid $color-full-white;
+	border-inline: px-to-rem(2) solid $color-full-white;
 	padding: 0.5em 1.5em;
 	font-weight: 600;
-	font-size: 12px;
+	font-size: px-to-rem(12);
 	letter-spacing: 0.1em;
 	color: $color-full-white;
 }
@@ -34,11 +35,11 @@
 %btn-big {
 	@extend %button;
 
-	width: 200px;
-	height: 45px;
-	border-inline: 3px solid $color-full-black;
+	width: px-to-rem(200);
+	height: px-to-rem(45);
+	border-inline: #{px-to-rem(3)} solid $color-full-black;
 	font-weight: 700;
-	font-size: 16px;
+	font-size: px-to-rem(16);
 	color: $color-full-black;
 }
 
@@ -60,7 +61,7 @@
 
 @media only screen and (px-to-rem(1600) > width) {
 	%btn-small {
-		;
+		font-size: rubber-size(1600, 11, 1366, 10);
 	}
 
 	%btn-big {
