--- a/src/components/portfolio/projects/project/information/Information.module.scss
+++ b/src/components/portfolio/projects/project/information/Information.module.scss
@@ -22,7 +22,7 @@
 
 @media only screen and (px-to-rem(1600) > width) {
 	.information {
-		;
+		padding-inline: rubber-size(1600, 60, 1366, 50);
 	}
 }
 
