--- a/src/components/ui/link/link-portfolio/LinkPortfolio.module.scss
+++ b/src/components/ui/link/link-portfolio/LinkPortfolio.module.scss
@@ -14,3 +14,51 @@
 		text-decoration: underline;
 	}
 }
+
+@media only screen and (px-to-rem(1600) > width) {
+	.link {
+		font-size: rubber-size(1600, 20, 1366, 17);
+	}
+}
+
+@media only screen and (px-to-rem(1366) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1280) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(1080) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.link {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.link {
+		;
+	}
+}
