The 'Portfolio' component adapted from 1366px to 1280px and from 1280px to 1080px

--- a/src/components/portfolio/projects-more/ProjectsMore.module.scss
+++ b/src/components/portfolio/projects-more/ProjectsMore.module.scss
@@ -13,15 +13,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.more {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.more {
-		;
+		height: rubber-size(1280, 60, 1080, 55);
 	}
 }
 
