--- a/src/components/portfolio/projects/project/information/Information.module.scss
+++ b/src/components/portfolio/projects/project/information/Information.module.scss
@@ -28,13 +28,13 @@
 
 @media only screen and (px-to-rem(1366) > width) {
 	.information {
-		;
+		padding-inline: rubber-size(1366, 50, 1280, 40);
 	}
 }
 
 @media only screen and (px-to-rem(1280) > width) {
 	.information {
-		;
+		padding-inline: rubber-size(1280, 40, 1080, 30);
 	}
 }
 
