--- a/src/components/ui/link/link-portfolio/LinkPortfolio.module.scss
+++ b/src/components/ui/link/link-portfolio/LinkPortfolio.module.scss
@@ -21,15 +21,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.link {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1280) > width) {
 	.link {
-		;
+		font-size: rubber-size(1280, 17, 1080, 15);
 	}
 }
 
