--- a/src/components/ui/text/heading/heading-project/HeadingProject.module.scss
+++ b/src/components/ui/text/heading/heading-project/HeadingProject.module.scss
@@ -25,13 +25,13 @@
 
 @media only screen and (px-to-rem(1366) > width) {
 	.heading {
-		;
+		font-size: rubber-size(1366, 20, 1280, 18);
 	}
 }
 
 @media only screen and (px-to-rem(1280) > width) {
 	.heading {
-		;
+		font-size: rubber-size(1280, 18, 1080, 15);
 	}
 }
 
