--- a/src/components/portfolio/projects/Projects.module.scss
+++ b/src/components/portfolio/projects/Projects.module.scss
@@ -29,3 +29,33 @@
 		max-width: px-to-rem(3840);
 	}
 }
+
+@media only screen and (px-to-rem(1080) > width) {
+	.projects {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
+@media only screen and (px-to-rem(900) > width) {
+	.projects {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(768) > width) {
+	.projects {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(576) > width) {
+	.projects {
+		;
+	}
+}
+
+@media only screen and (px-to-rem(480) > width) {
+	.projects {
+		;
+	}
+}
