--- a/src/components/portfolio/projects/project/information/buttons/Buttons.module.scss
+++ b/src/components/portfolio/projects/project/information/buttons/Buttons.module.scss
@@ -17,27 +17,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	.buttons {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1280) > width) {
-	.buttons {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1080) > width) {
-	.buttons {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(900) > width) {
 	.buttons {
-		;
+		margin-top: rubber-size(900, 15, 768, 12);
 	}
 }
 
