--- a/src/components/portfolio/projects/project/Project.module.scss
+++ b/src/components/portfolio/projects/project/Project.module.scss
@@ -18,12 +18,40 @@
 .project {
 	position: relative;
 	aspect-ratio: 8 / 5;
+}
 
-	&:hover .image {
-		opacity: .2;
+@media only screen and (hover: hover) {
+	.project:hover {
+		& .image {
+			opacity: .2;
+		}
+
+		& .info {
+			opacity: 1;
+		}
 	}
+}
 
-	&:hover .info {
-		opacity: 1;
+@media only screen and (hover: none) {
+	.project {
+		& .image {
+			pointer-events: none;
+		}
+
+		& .info {
+			pointer-events: none;
+		}
+
+		&:focus-within {
+			& .image {
+				opacity: .2;
+				pointer-events: all;
+			}
+
+			& .info {
+				opacity: 1;
+				pointer-events: all;
+			}
+		}
 	}
 }
