--- a/src/assets/sass/_classes.scss
+++ b/src/assets/sass/_classes.scss
@@ -64,21 +64,9 @@
 	}
 }
 
-@media only screen and (px-to-rem(1366) > width) {
-	%btn-big {
-		;
-	}
-}
-
-@media only screen and (px-to-rem(1280) > width) {
-	%btn-big {
-		;
-	}
-}
-
 @media only screen and (px-to-rem(1080) > width) {
 	%btn-big {
-		;
+		font-size: rubber-size(1080, 15, 900, 13);
 	}
 }
 
